adding some quotes in second quote

--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<h1>
-This is your life thing well and take the right decision</h1>
+<h1>This is your life thing well and take the right decision</h1>
+<h2>Be positive and stay happy forever!</h2>  
 </body>
 </html>
